--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="Author" content="https://github.com/ashokladumor/ashokladumor" />
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&family=Roboto+Mono&display=swap" rel="stylesheet">
         <!-- bxSlider CSS file -->
-        <link href="/assets/css/jquery.bxslider.css" rel="stylesheet" />
+        <link href="/ashokladumor/assets/css/jquery.bxslider.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://ashokladumor.github.io/ashokladumor/assets/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
         <link href="https://ashokladumor.github.io/ashokladumor/assets/css/main.css" media="screen, projection" rel="stylesheet" type="text/css" />
